--- a/week-04-sdlc/index.html
+++ b/week-04-sdlc/index.html
@@ -602,7 +602,7 @@
       <div class="footer-bottom">
         <p>© <span id="year"></span> Pravin Mishra. All rights reserved.</p>
         <p>Crafted with <span>cloud</span> excellence by Pravin Mishra</p>
-        <p>Pravin Mishra Portfolio v1.0 — Deployed on <span id="deployDate"></span> — By <Student Name>Aderinto Adedayo</Student> From Group 4</p>
+        <p>Pravin Mishra Portfolio v1.0 — Deployed on <span id="deployDate"></span> — By <Student Name>Aderinto Adedayo</Student> | Group 4</p>
           <!-- <div id="deployment-info">
   <p>Last Deployment: <span id="deployment-date">Loading...</span></p> -->
 </div>
